--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   ],
   "pkgConfigDesc": "pkgConfig 配置的是要依赖的功能包，为空则依赖全部，git 提交务必为空",
   "pkgConfig": [],
-  "proConfigDesc": "proConfig 配置的是使用本地还是仓库，优先级低于 appConfig 和 pkgConfig",
+  "proConfigDesc": "proConfig 配置的是使用本地还是仓库，优先级低于 appConfig 和 pkgConfig，取代setting.gradle#include ':xxx'",
   "proConfig": [
     {
       "isApply": true,
