添加Fragment非首屏冷启动显示优化，添加RecyclerView的点击事件

--- a/feature/sample/pkg/src/main/AndroidManifest.xml
+++ b/feature/sample/pkg/src/main/AndroidManifest.xml
@@ -4,5 +4,6 @@
 
     <application>
         <activity android:name=".feature.view.SampleActivity" />
+        <activity android:name=".feature.view.FirstActivity" />
     </application>
 </manifest>
