特殊方式掌控软键盘状态

--- a/feature/launch/app/src/main/AndroidManifest.xml
+++ b/feature/launch/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="user"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
