--- a/feature/sample/pkg/src/main/AndroidManifest.xml
+++ b/feature/sample/pkg/src/main/AndroidManifest.xml
@@ -5,5 +5,6 @@
     <application>
         <activity android:name=".feature.view.SampleActivity" />
         <activity android:name=".feature.view.FirstActivity" />
+        <activity android:name=".feature.view.fps.FpsMonitorActivity" />
     </application>
 </manifest>
