处理登录页输入框被软键盘遮挡的场景

--- a/buildApp.gradle
+++ b/buildApp.gradle
@@ -69,7 +69,7 @@ dependencies {
 
     // 根据 Config.pkgConfig 来依赖所有 pkg
     for (def entrySet : ConfigUtils.getApplyPkgs().entrySet()) {
-        api entrySet.value.dep
+        implementation entrySet.value.dep
     }
 
 //    if (Config.depConfig.feature_mock.isApply) {
