--- a/config.json
+++ b/config.json
@@ -46,6 +46,10 @@
       "isApply": true,
       "useLocal": true,
       "localPath": ":feature:sample:export"
+    }, {
+      "isApply": true,
+      "useLocal": true,
+      "localPath": ":lib:faster"
     }
   ]
 }
