add viewpager sample code

--- a/feature/sample/pkg/src/main/AndroidManifest.xml
+++ b/feature/sample/pkg/src/main/AndroidManifest.xml
@@ -8,5 +8,6 @@
         <activity android:name=".feature.view.fps.LoginActivity"
             android:windowSoftInputMode="adjustNothing"
             />
+        <activity android:name=".feature.view.viewpager.ViewPagerActivity" />
     </application>
 </manifest>
