--- a/feature/launch/app/src/main/AndroidManifest.xml
+++ b/feature/launch/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".webview.WebViewActivity" />
+        <activity android:name="com.bsnl.sample.pkg.feature.view.webview.WebViewActivity" />
 
     </application>
 </manifest>
