--- a/build.gradle
+++ b/build.gradle
@@ -32,20 +32,6 @@ allprojects {
         maven {
             url 'https://maven.aliyun.com/repository/public'
         }
-        maven {
-            credentials {
-                username '5f894fd2a3bcee4a4855f829'
-                password 'OX29m8K837Nb'
-            }
-            url 'https://packages.aliyun.com/maven/repository/2042300-release-WfnNlP/'
-        }
-        maven {
-            credentials {
-                username '5f894fd2a3bcee4a4855f829'
-                password 'OX29m8K837Nb'
-            }
-            url 'https://packages.aliyun.com/maven/repository/2042300-snapshot-7Fuyed/'
-        }
     }
 
     configurations.all {
@@ -55,6 +41,47 @@ allprojects {
             if (it.requested.group == 'com.android.support'
                     && !it.requested.name.contains('multidex')) {
                 it.useVersion Config.supportVersion
+            }
+        }
+    }
+}
+
+subprojects {
+    configurations.all {
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+
+
+            if (details.requested.group == 'androidx.lifecycle') {
+                details.useVersion "2.2.0"
+            }
+            if (details.requested.group == 'androidx.appcompat') {
+                details.useVersion "1.2.0"
+            }
+            if (details.requested.group == 'androidx.core:core') {
+                details.useVersion "1.3.1"
+            }
+            if (details.requested.group == 'androidx.arch.core') {
+                details.useVersion "2.1.0"
+            }
+            if (details.requested.group == 'androidx.fragment') {
+                details.useVersion "1.1.0"
+            }
+            if (details.requested.group == 'androidx.constraintlayout') {
+                details.useVersion "2.0.1"
+            }
+            if (details.requested.group == 'androidx.recyclerview') {
+                details.useVersion "1.1.0"
+               // GLog.d("-------- "+details.requested.toString())
+            }
+            if (details.requested.group == 'androidx.transition') {
+                details.useVersion "1.2.0"
+            }
+
+            if (details.requested.group == 'androidx.localbroadcastmanager') {
+                details.useVersion "1.0.0-rc01"
+            }
+            if (details.requested.group == 'androidx.databinding') {
+                details.useVersion "3.6.3"
             }
         }
     }
