--- a/config.json
+++ b/config.json
@@ -51,5 +51,10 @@
       "useLocal": true,
       "localPath": ":lib:faster"
     }
+  , {
+      "isApply": true,
+      "useLocal": true,
+      "localPath": ":lib:databinding"
+    }
   ]
 }
