--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
 
+    ext {
+        kotlin_version = '1.4.10'
+    }
     ConfigUtils.init(gradle)
     repositories {
         // use for debug plugin local
@@ -14,6 +17,7 @@ buildscript {
 
     dependencies {
 
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         for (def entrySet : ConfigUtils.getApplyPlugins().entrySet()) {
             classpath entrySet.value.dep
         }
