feature# use Hilt,Room

--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-
-    ext {
-        kotlin_version = '1.4.10'
-    }
     ConfigUtils.init(gradle)
     repositories {
         // use for debug plugin local
@@ -16,8 +12,7 @@ buildscript {
 
 
     dependencies {
-
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28.1-alpha'
         for (def entrySet : ConfigUtils.getApplyPlugins().entrySet()) {
             classpath entrySet.value.dep
         }
@@ -27,7 +22,6 @@ buildscript {
 }
 
 allprojects {
-
     repositories {
         maven() { url uri("${project.rootDir.path}/mavenLocal") }
         maven { url "https://jitpack.io" }
@@ -68,7 +62,6 @@ subprojects {
                 details.useVersion "2.1.0"
             }
             if (details.requested.group == 'androidx.fragment') {
-               //  GLog.d("-------- "+details.requested.toString())
                 details.useVersion "1.2.5"
             }
             if (details.requested.group == 'androidx.constraintlayout') {
