feat# 尝试异步创建view

--- a/feature/sample/pkg/src/main/AndroidManifest.xml
+++ b/feature/sample/pkg/src/main/AndroidManifest.xml
@@ -9,5 +9,6 @@
             android:windowSoftInputMode="adjustNothing"
             />
         <activity android:name=".feature.view.viewpager.ViewPagerActivity" />
+        <activity android:name=".feature.view.async.AsyncCreateViewActivity" />
     </application>
 </manifest>
