feat# 异步创建View+ViewPools

--- a/feature/sample/pkg/src/main/AndroidManifest.xml
+++ b/feature/sample/pkg/src/main/AndroidManifest.xml
@@ -10,5 +10,6 @@
             />
         <activity android:name=".feature.view.viewpager.ViewPagerActivity" />
         <activity android:name=".feature.view.async.AsyncCreateViewActivity" />
+        <activity android:name=".feature.view.async.AsyncCreateView2Activity" />
     </application>
 </manifest>
