feat# 利用ArtHook检查bitmap、drawable是否过大

--- a/lib/base/build.gradle
+++ b/lib/base/build.gradle
@@ -19,4 +19,5 @@ dependencies {
     api Config.depConfig.timber.dep
     api Config.depConfig.glide_runtime.dep
     kapt Config.depConfig.glide_compiler.dep
+    api Config.depConfig.epic.dep
 }
