--- a/feature/launch/app/src/main/AndroidManifest.xml
+++ b/feature/launch/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.bsnl.launch.app">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -8,8 +9,9 @@
     <application
         android:allowBackup="false"
         android:icon="@drawable/feature_launch_app_ic_logo"
-        android:label="@string/name"
+        android:label="@string/app_name"
         android:name=".App"
+        tools:replace="android:label"
         android:theme="@style/lib_base_AppTheme"
       >
 
