--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ConfigUtils.init(gradle)
+    ext.kotlin_version = "1.5.10"
+    ext.plugin_version="0.2.7"
+    ext.arouter_register_version = '1.0.2'
+
     repositories {
-        // use for debug plugin local
-        if (Config.depConfig.plugin_bus.useLocal || Config.depConfig.plugin_api.useLocal) {
-            maven() { url uri("${project.rootDir.path}/mavenLocal") }
-        }
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
+
+
     }
-
-
     dependencies {
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28.1-alpha'
-        for (def entrySet : ConfigUtils.getApplyPlugins().entrySet()) {
-            classpath entrySet.value.dep
-        }
+        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
+        classpath "com.alibaba:arouter-register:$arouter_register_version"
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 
 
@@ -29,16 +32,6 @@ allprojects {
         jcenter()
         maven {
             url 'https://maven.aliyun.com/repository/public'
-        }
-    }
-
-    configurations.all {
-        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
-        resolutionStrategy.eachDependency {
-            if (it.requested.group == 'com.android.support'
-                    && !it.requested.name.contains('multidex')) {
-                it.useVersion Config.supportVersion
-            }
         }
     }
 }
