--- a/feature/constraint/pkg/build.gradle
+++ b/feature/constraint/pkg/build.gradle
@@ -1,3 +1,34 @@
+if (constraint_runAlone.toBoolean()) {
+    apply plugin: 'com.android.application'
+} else {
+    apply plugin: 'com.android.library'
+}
+apply from: "../../../buildCommon.gradle"
+
+
+android {
+    defaultConfig {
+        if (constraint_runAlone.toBoolean()) {
+            applicationId "me.module.constraint"
+            multiDexEnabled true
+        }
+    }
+    sourceSets {
+        main {
+            if (constraint_runAlone.toBoolean()) {
+                manifest.srcFile 'src/main/debug/AndroidManifest.xml'
+            } else {
+                manifest.srcFile 'src/main/AndroidManifest.xml'
+                java {
+                    exclude 'debug/**'
+                }
+            }
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+}
+
 dependencies {
-    implementation project(':feature_sample_pkg')
+    api project(':lib:common')
+    kapt Config.aRouter_compiler
 }
