--- a/lib/base/build.gradle
+++ b/lib/base/build.gradle
@@ -1,23 +1,30 @@
+apply plugin: "com.android.library"
+apply from: "../../buildCommon.gradle"
+
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    api Config.depConfig.kotlin.dep
-    api Config.depConfig.coreKtx.dep
-    api Config.depConfig.appcompat.dep
-    api Config.depConfig.multidex.dep
-    api Config.depConfig.gson.dep
-    api Config.depConfig.retrofit_runtime.dep
-    api Config.depConfig.okhttp_logging.dep
-    api Config.depConfig.convert_gson.dep
-    api Config.depConfig.constraintlayout.dep
-    api Config.depConfig.recyclerview.dep
-    api Config.depConfig.viewpager2.dep
-    api Config.depConfig.viewModel.dep
-    api Config.depConfig.liveData.dep
-    api Config.depConfig.commonJava8.dep
-    api Config.depConfig.mmkv.dep
-    api Config.depConfig.permissionx.dep
-    api Config.depConfig.timber.dep
-    api Config.depConfig.glide_runtime.dep
-    kapt Config.depConfig.glide_compiler.dep
-    api Config.depConfig.epic.dep
+    api Config.kotlin
+    api Config.coreKtx
+    api Config.appcompat
+    api Config.multidex
+    api Config.gson
+    api Config.retrofit_runtime
+    api Config.okhttp_logging
+    api Config.convert_gson
+    api Config.constraintlayout
+    api Config.recyclerview
+    api Config.viewpager2
+    api Config.viewModel
+    api Config.liveData
+    api Config.commonJava8
+    api Config.mmkv
+    api Config.permissionx
+    api Config.timber
+    api Config.glide_runtime
+    kapt Config.glide_compiler
+    api Config.epic
+    api Config.aRouter
+    kapt Config.aRouter_compiler
+    api project(":lib:faster")
+
 }
