--- a/lib/base/build.gradle
+++ b/lib/base/build.gradle
@@ -20,8 +20,8 @@ dependencies {
     api Config.mmkv
     api Config.permissionx
     api Config.timber
-    api Config.glide_runtime
-    kapt Config.glide_compiler
+    /*api Config.glide_runtime
+    kapt Config.glide_compiler*/
     api Config.epic
     api Config.aRouter
     kapt Config.aRouter_compiler
