--- a/buildCommon.gradle
+++ b/buildCommon.gradle
@@ -65,8 +65,9 @@ android {
         jvmTarget = '1.8'
     }
 
-    buildFeatures{
+    buildFeatures {
         viewBinding = true
+        dataBinding = true
     }
 
     packagingOptions {
