feat：Retrofit#addConverterFactory， 消除BaseResponse在ApiService中的重复代码

--- a/lib/base/build.gradle
+++ b/lib/base/build.gradle
@@ -24,5 +24,6 @@ dependencies {
     api Config.aRouter
     kapt Config.aRouter_compiler
     api project(":lib:faster")
+    api Config.convex
 
 }
