--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,15 @@ buildscript {
 
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
         classpath "com.alibaba:arouter-register:$arouter_register_version"
+        // booster
+        classpath "com.didiglobal.booster:booster-gradle-plugin:3.3.1"
+        // convex-booster
+        classpath "org.paradisehell.convex:convex-booster:1.0.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
