--- a/feature/launch/app/build.gradle
+++ b/feature/launch/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: "com.didiglobal.booster"
 apply from: "../../../buildCommon.gradle"
 
 dependencies {
