feat：基类加入屏幕适配

--- a/lib/base/build.gradle
+++ b/lib/base/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     kapt Config.aRouter_compiler
     api project(":lib:faster")
     api Config.convex
+    api Config.coordinatorlayout
 
 }
