feat：通过ARouter提供的注册插件进行路由表的自动加载，缩短初始化时间解决应用加固导致无法直接访问dex文件，初始化失败的问题

--- a/feature/launch/app/build.gradle
+++ b/feature/launch/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: "com.didiglobal.booster"
 apply from: "../../../buildCommon.gradle"
+apply plugin: 'com.alibaba.arouter'
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
