feat： 1、抽取出最简单列表页:SimpleListActivity(SimpleListFragment)，如有复杂布局,建议使用BaseListActivity等； 2、从WrapLayoutDelegateImpl中删除RefreshLayout相关设置的代码,让ListViewDategateImpl单独负责； 3、BaseViewModel中加入网络请求onStar-onSuccess-onError相关的处理逻辑。

--- a/feature/launch/app/src/main/AndroidManifest.xml
+++ b/feature/launch/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:label="小锤子"
         android:name=".App"
         tools:replace="android:label"
+        android:usesCleartextTraffic="true"
         android:theme="@style/lib_base_AppTheme"
       >
 
