feat：从base中抽取图片加载模块；完善RecyclerView#ItemClick; 升级core的版本号。

--- a/feature/launch/app/src/main/AndroidManifest.xml
+++ b/feature/launch/app/src/main/AndroidManifest.xml
@@ -20,12 +20,11 @@
             android:name="com.dawn.launch.app.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="user"
-            android:windowSoftInputMode="adjustNothing"
-           >
+            android:exported="true"
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
