--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include ':feature:sample:pkg'
 include ':feature:sample:export'
 include ':lib:base'
 include ':lib:faster'
+include ':lib:imageLoader'
