--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
         classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
         classpath "com.alibaba:arouter-register:$arouter_register_version"
@@ -29,7 +29,7 @@ allprojects {
         maven() { url uri("${project.rootDir.path}/mavenLocal") }
         maven { url "https://jitpack.io" }
         google()
-        jcenter()
+        mavenCentral()
         maven {
             url 'https://maven.aliyun.com/repository/public'
         }
@@ -43,13 +43,16 @@ subprojects {
                 details.useVersion "1.3.5"
             }
             if (details.requested.group == 'androidx.core' && details.requested.name=='core') {
-                details.useVersion "1.3.2"
+                details.useVersion "1.6.0"
             }
             if (details.requested.group == 'androidx.lifecycle' && details.requested.name =='lifecycle-livedata') {
                 details.useVersion "2.2.0"
             }
             if (details.requested.group == 'androidx.appcompat') {
                 details.useVersion "1.2.0"
+            }
+            if (details.requested.group == 'androidx.core' && details.requested.name=='core-ktx') {
+                details.useVersion "1.6.0"
             }
         }
     }
