feat：新增domain,新增useCase用例

--- a/feature/sample/pkg/build.gradle
+++ b/feature/sample/pkg/build.gradle
@@ -32,6 +32,7 @@ android {
 dependencies {
     api project(':lib:imageLoader')
     api project(':lib:network')
+    api project(':lib:domain')
     kapt Config.aRouter_compiler
     api project(':feature:sample:export')
     api Config.epic
