--- a/feature/sample/pkg/src/main/AndroidManifest.xml
+++ b/feature/sample/pkg/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name="com.dawn.sample.pkg.feature.view.async.AsyncCreateView2Activity" />
         <activity android:name="com.dawn.sample.pkg.feature.view.gson.GsonDemoActivity" />
         <activity android:name="com.dawn.sample.pkg.feature.view.countdowm.CountDownActivity" />
+        <activity android:name=".feature.view.download.DownLoadActivity" />
 
     </application>
 </manifest>
