--- a/feature/launch/app/build.gradle
+++ b/feature/launch/app/build.gradle
@@ -9,5 +9,7 @@ dependencies {
     debugImplementation Config.leakcanary
     //api project(":lib:faster")
     implementation 'com.github.Caij:DGAppStartup:1.0.2'
+    implementation Config.lottie
+
 
 }
