build：使用callbackFlow消除回调代码

--- a/feature/launch/app/build.gradle
+++ b/feature/launch/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply from: "../../../buildCommon.gradle"
-apply plugin: 'com.alibaba.arouter'
+//apply plugin: 'com.alibaba.arouter'
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
