feat：更优的组件初始化方案：SPI+AutoService

--- a/feature/launch/app/build.gradle
+++ b/feature/launch/app/build.gradle
@@ -11,5 +11,5 @@ dependencies {
     implementation 'com.github.Caij:DGAppStartup:1.0.2'
     implementation Config.lottie
 
-
+    kapt Config.autoServiceAnnotations
 }
