--- a/feature/sample/pkg/build.gradle
+++ b/feature/sample/pkg/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     api Config.material
     api Config.viewpager2
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+    kapt Config.autoServiceAnnotations
 }
