--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,6 @@ include ':lib:baseArch'
 include ':lib:imageLoader'
 include ':lib:network'
 include ':lib:domain'
+include ':feature:constraint:pkg'
+include ':feature:constraint:export'
+include ':feature:mock'
