--- a/feature/constraint/pkg/build.gradle
+++ b/feature/constraint/pkg/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 dependencies {
-    api project(':lib:base')
+    api project(':lib:baseArch')
     api project(':feature:constraint:export')
     kapt Config.aRouter_compiler
 }
