--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ include ':lib:domain'
 include ':feature:constraint:pkg'
 include ':feature:constraint:export'
 include ':feature:mock'
+include ':feature:sample:app'
